	python objects, so that Gramps classes are never pickled.
	* Date.py, CalSdn.py: Move to RelLib.
	* src/dates/Date_*.py: Use new Date.
	* src/plugins/*.py: Use new Date.
	* src/GrampsDb/_*.py: Use new Date, new unserialize.
	* src/*.py: Use new Date.

	* src/Makefile.am: Remove absent glade files from the list.
	* src/GrampsDb/Makefile.am: Ship new glade files; correct directory.

2006-02-03 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/TreeViews/_PersonTreeView.py: added more columns
	
2006-02-03 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
        * src/GrampsDb/_GrampsBSDDB.py: fixed typo
	* src/Models: added initial fast model implementation
	* src/TreeViews: added treeview that uses new Models
	* src/try_tree_model.py: harness for running treeview
	
2006-02-02  Don Allingham  <don@gramps-project.org>
	* src/PersonView.py: history
	* src/EditPerson.py: start the save routine.
	* src/DdTargets.py: add support for data items in sources
	* src/EventEdit.py: use DisplayTabs
	* src/gramps.glade: New EventEditor with display tabs
	* src/DisplayTabs.py: specify data _DND_TYPE, don't enable d-n-d if 
	_DND_TYPE not defined
	* src/DisplayState.py: add standard function for using WATCH cursor
	* src/PageView.py: enable watch cursor when it is necessary to 
	rebuild a page.
	* src/EditMedia.py: break out of ImageSelect, since ImageSelect
	will probably go away. Add media editing ability using DisplayTabs.
	* src/MediaView.py: call EditMedia
	* src/gramps.glade: clean up media editor dialog

2006-02-02  Alex Roitman  <shura@gramps-project.org>
	* src/GrampsDb/_GrampsBSDDB.py (transaction_begin,
	transaction_commit): only do secondary index magic if not
	instructde otherwise; (BdbTransaction.__init__): accept additional
	argument, pass it on to Transaction class.
	* src/GrampsDb/_GrampsDbBase.py (Transaction.__init__): accept
	additional argument for no_magic.
	* src/GrampsDb/_ReadGedcom.py (NoteParser): count people during